# doctr

./: .doctr.toml  CRUSH.md  GOALS.md  PROGRESS.md  README.md  main.py  pyproject.toml
doctr/doctr/: __main__.py
doctr/doctr/cli/: main.py
doctr/doctr/core/: ai_wiki_generator.py  analyzer.py  diff_parser.py  doc_model.py  generator.py  intelligent_analyzer.py  wiki_generator.py  writer.py
doctr/doctr/integrations/: llm.py
doctr/doctr/languages/go/: analyzer.py
doctr/doctr/languages/python/: analyzer.py
doctr/doctr/utils/: config.py
doctr/tests/: test_generator.py  test_llm_integration.py
