[project]
name = "doctr"
version = "0.1.0"
description = "Automatic documentation generation daemon using AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.45",
    "pydantic-ai>=0.7.4",
    "toml>=0.10.2",
    "typer>=0.16.1",
]

[project.scripts]
doctr = "doctr.doctr.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
